Added workflowStatuses controller and updated API
